--- a/estilo.css
+++ b/estilo.css
@@ -60,8 +60,9 @@ h1 {
 }
 .container6 {
     display: flex;
-    justify-content: space-around;
-    padding: 0 8%;
+    justify-content: space-evenly;
+    /* justify-content: space-around; */
+    /* padding: 0 8%; */
 }
 .container-desafioB {
     display: flex;
